--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@ $(document).delegate('#reseta', 'click', function(e){
 		<style>
 		body{
 	    	background: url(pavo.jpg) no-repeat bottom center fixed;
+
+    background-color: #FFF3C3;
+
 		}
 
 /*		.section-center__full {
@@ -186,6 +189,8 @@ $(document).delegate('#reseta', 'click', function(e){
 		  justify-content: center;
 		  align-items: center;
 		}*/
+
+
 
 		h1,h2,h3,h4,h5,h6{
 			margin: 0!important;
