--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ $(document).delegate('#reseta', 'click', function(e){
 		body{
 	    	background: url(pavo.jpg) no-repeat bottom center fixed;
 
-    background-color: #FFF3C3;
+    background-color: #FFF3C3!important;
 
 		}
 
