--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:site_name" content="COMANDOS LEE BRA">
 		<meta property="og:title" content="COMANDOS LEE BRA" />
 		<meta property="og:description" content="COMANDOS LEE BRA" />
-		<meta property="og:image" itemprop="image" content="https://coreilabs.github.io/comandosLeeBra/bg.jpg">
+		<meta property="og:image" itemprop="image" content="https://coreilabs.github.io/comandosLeeBra/bag.jpg">
 		<meta property="og:type" content="website" />
 		<meta property="og:updated_time" content="1440432930" />
 		<meta name="google-site-verification" content="rktMrtB90cVGsyIPlVdUwc5Nox7Zb1XmzKJEUD7bKUc" />
@@ -206,9 +206,12 @@ $(document).delegate('#reseta', 'click', function(e){
 
 		<body>
 
+
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
+
 						<div id="resultado" class="animated fadeIn" style="display: none;"></div>
 
 			<form action="" class="a">
