--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:site_name" content="COMANDOS LEE BRA">
 		<meta property="og:title" content="COMANDOS LEE BRA" />
 		<meta property="og:description" content="COMANDOS LEE BRA" />
-		<meta property="og:image" itemprop="image" content="https://coreilabs.github.io/comandosLeeBra/bag.jpg">
+		<meta property="og:image" itemprop="image" content="https://coreilabs.github.io/comandosLeeBra/bag.jpg?1231">
 		<meta property="og:type" content="website" />
 		<meta property="og:updated_time" content="1440432930" />
 		<meta name="google-site-verification" content="rktMrtB90cVGsyIPlVdUwc5Nox7Zb1XmzKJEUD7bKUc" />
