--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 				console.clear();
 				str = $("#codigo").val();
+				str = str.toLowerCase();
 
 				// var str = "How are you doing today?";
 // var str = str.split(" ");
