--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ $(document).delegate('#reseta', 'click', function(e){
 
 
 
-<div class="container">
+<div class="container text-center">
 	<div class="row">
 		<div class="col-md-12">
 
@@ -228,6 +228,16 @@ $(document).delegate('#reseta', 'click', function(e){
 										<input type="reset" value="Limpar" class="btn btn-danger"/>
 									</form>
 		</div>
+	</div>
+	<div class="row" ><br>
+		<h3>OUTROS APPS</h3>
+		<a class="text-center btn btn-active" href="https://coreilabs.github.io/carlosMorse/" target="_BLANK"> TRADUTOR DE CARLOS MORSE</a><br>
+		<a class="text-center btn btn-active" href="https://coreilabs.github.io/seunomecomunista/" target="_BLANK"> DESCUBRA SEU NOME COMUNISTA</a><br>
+		<a class="text-center btn btn-active" href="https://coreilabs.github.io/embaralhadorSONARO/" target="_BLANK"> EMBARALHADOR DE PLAVRAS SONARO</a><br>
+		
+
+
+<!-- https://coreilabs.github.io/comandosLeeBra/ -->
 	</div>
 </div>
 <!-- 			<section id="header">
